Fix firmware path for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         
         let serialPort = null;
         let isConnected = false;
-        const FIRMWARE_PATH = './firmwares/esp32fw.bin';
+        const FIRMWARE_PATH = './webflasher/firmwares/esp32fw.bin';
 
         // Update port list
         async function updatePortList() {
