Use esm.sh instead of unpkg for better CORS support

--- a/webflasher/index.html
+++ b/webflasher/index.html
@@ -259,8 +259,8 @@
                     ]
                 };
 
-                // Dynamically import esp-web-tools
-                const { install } = await import('https://unpkg.com/esp-web-tools@10/dist/web/install.js');
+                // Dynamically import esp-web-tools (using esm.sh for better CORS support)
+                const { install } = await import('https://esm.sh/esp-web-tools@10/dist/web/install.js');
 
                 // Use esp-web-tools install function
                 await install(manifest, {
