--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
         // Set manifest URL on the button
         if (flashEl) {
-            flashEl.setAttribute('manifest', './manifest.json');
+            flashEl.setAttribute('manifest', './webflasher/manifest.json');
         }
 
         // Enable button
