--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
     </style>
     <!-- ESP Web Tools -->
     <script type="module" src="https://unpkg.com/esp-web-tools@10/dist/web/install-button.js?module"></script>
+    <!-- Firebase -->
+    <script type="module" src="./firebase-config.js"></script>
 </head>
 <body>
     <div class="container">
@@ -108,8 +110,14 @@
     </div>
 
     <script type="module">
+        import { db, initAnalytics } from './firebase-config.js';
+        import { collection, addDoc, serverTimestamp } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js';
+
         const flashEl = document.getElementById("flashEl");
         const flashBtn = document.getElementById("flashBtn");
+
+        // Initialize Analytics
+        let analytics = await initAnalytics();
 
         // Set manifest URL on the button
         if (flashEl) {
@@ -121,6 +129,45 @@
             flashBtn.disabled = false;
             flashBtn.removeAttribute('disabled');
         }
+
+        // Firebase: Log flash events
+        flashEl.addEventListener('state-changed', async (event) => {
+            const state = event.detail;
+            
+            // Log to Firestore when flash starts
+            if (state === 'installing') {
+                try {
+                    await addDoc(collection(db, 'flash_events'), {
+                        event: 'flash_started',
+                        timestamp: serverTimestamp(),
+                        userAgent: navigator.userAgent
+                    });
+                } catch (error) {
+                    console.error('Error logging flash event:', error);
+                }
+            }
+
+            // Log when flash completes
+            if (state === 'installed') {
+                try {
+                    await addDoc(collection(db, 'flash_events'), {
+                        event: 'flash_completed',
+                        timestamp: serverTimestamp(),
+                        userAgent: navigator.userAgent
+                    });
+                    
+                    // Log analytics event
+                    if (analytics) {
+                        const { logEvent } = await import('https://www.gstatic.com/firebasejs/10.7.1/firebase-analytics.js');
+                        logEvent(analytics, 'firmware_flashed', {
+                            firmware_version: 'OL33-1.0'
+                        });
+                    }
+                } catch (error) {
+                    console.error('Error logging flash event:', error);
+                }
+            }
+        });
     </script>
 </body>
 </html>
